--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -11,6 +11,18 @@
 
     <dependencies>
 
+        <!-- spring security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>3.1.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>3.1.4.RELEASE</version>
+        </dependency>
+
         <!--log4j-->
         <dependency>
             <groupId>log4j</groupId>
